--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
-language: objective-c
+language: swift
 osx_image: xcode9
 script:
-- swift build
-after_success: bash <(curl -s https://codecov.io/bash)
+  - swift build
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
