--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: swift
 osx_image: xcode9
 script:
-  - xcrun xcodebuild -project Lazy.xcodeproj
+  - xcrun xcodebuild -project Lazy.xcodeproj -scheme Lazy-macOS test
   - swift build
 after_success:
   - bash <(curl -s https://codecov.io/bash)
